# bitcoin

./: INSTALL  Makefile.am  README.md  configure.ac  project.config
contrib/: README.md  bitcoin-qt.pro  hydracoind.bash-completion  qt_translations.py
contrib/debian/: README.md  bitcoin-qt.install  bitcoind.bash-completion  bitcoind.install  changelog  control  copyright  hydracoin-qt.desktop  hydracoin-qt.lintian-overrides  hydracoin-qt.protocol  hydracoind.examples  hydracoind.lintian-overrides  hydracoind.manpages  rules  watch
contrib/debian/examples/: bitcoin.conf
contrib/debian/manpages/: hydracoin-qt.1  hydracoin.conf.5  hydracoind.1
contrib/gitian-descriptors/: README.md  deps-win32.yml  gitian-win32.yml  gitian.yml  qt-win32.yml
contrib/gitian-downloader/: bluematt-key.pgp  linux-download-config  win32-download-config
contrib/linearize/: example-linearize.cfg
contrib/pyminer/: README.md
contrib/qos/: README.md
contrib/seeds/: README.md
contrib/spendfrom/: README.md  setup.py  spendfrom.py
contrib/testgen/: base58.py
contrib/verifysfbinaries/: verify.sh
contrib/wallettools/: README.md
doc/: Doxyfile  README.md  README_windows.txt  assets-attribution.md  build-msw.md  build-osx.md  build-unix.md  coding.md  multiwallet-qt.md  release-process.md  tor.md  translation_process.md  unit-tests.md
qa/pull-tester/: build-tests.sh.in  pull-tester.py  pull-tester.sh  run-hydracoind-for-test.sh.in
share/: setup.nsi.in  ui.rc
share/certs/: PrivateKeyNotes.md
share/pixmaps/: bitcoin16.xpm  bitcoin256.xpm  bitcoin32.xpm  hydracoin128.xpm  hydracoin64.xpm
share/qt/: Info.plist.in  clean_mac_info_plist.py  extract_strings_qt.py  make_windows_icon.sh
src/: .gitignore  Makefile.am  Makefile.include  bitcoind-res.rc  chainparams.cpp  clientversion.h  hydracoin-cli-res.rc  hydracoin-cli.cpp  hydracoind.cpp  hydracoinrpc.cpp  init.cpp  keystore.h  main.cpp  main.h  miner.cpp  net.cpp  netbase.h  noui.cpp  rpcblockchain.cpp  rpcdump.cpp  rpcmining.cpp  rpcnet.cpp  rpcrawtransaction.cpp  rpcwallet.cpp  script.cpp  util.cpp  util.h  version.cpp  wallet.cpp  walletdb.cpp
src/qt/: Makefile.am  addressbookpage.cpp  addresstablemodel.cpp  askpassphrasedialog.cpp  bitcoin.qrc  bitcoinamountfield.cpp  bitcoinamountfield.h  bitcoingui.cpp  bitcoinunits.h  guiutil.cpp  guiutil.h  hydracoin.cpp  hydracoinaddressvalidator.cpp  hydracoingui.h  hydracoinstrings.cpp  hydracoinunits.cpp  intro.cpp  notificator.h  optionsdialog.cpp  optionsmodel.cpp  overviewpage.cpp  paymentrequest.proto  paymentserver.cpp  paymentserver.h  receivecoinsdialog.cpp  receivecoinsdialog.h  receiverequestdialog.cpp  rpcconsole.cpp  rpcconsole.h  sendcoinsdialog.cpp  sendcoinsdialog.h  sendcoinsentry.cpp  sendcoinsentry.h  signverifymessagedialog.cpp  transactiondesc.cpp  transactiontablemodel.cpp  transactionview.cpp  walletframe.cpp  walletframe.h  walletmodel.cpp  (+2 more)
src/qt/forms/: aboutdialog.ui  addressbookpage.ui  optionsdialog.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: bitcoin_ach.ts  bitcoin_ar.ts  bitcoin_be_BY.ts  bitcoin_bg.ts  bitcoin_bs.ts  bitcoin_ca.ts  bitcoin_ca_ES.ts  bitcoin_cs.ts  bitcoin_cy.ts  bitcoin_da.ts  bitcoin_de.ts  bitcoin_el_GR.ts  bitcoin_en.ts  bitcoin_es_CL.ts  bitcoin_et.ts  bitcoin_fr.ts  bitcoin_gu_IN.ts  bitcoin_hi_IN.ts  bitcoin_hr.ts  bitcoin_id_ID.ts  bitcoin_ja.ts  bitcoin_lv_LV.ts  bitcoin_ms_MY.ts  bitcoin_nb.ts  bitcoin_pl.ts  bitcoin_pt_BR.ts  bitcoin_ru.ts  bitcoin_sq.ts  bitcoin_sr.ts  bitcoin_th_TH.ts  bitcoin_tr.ts  bitcoin_vi.ts  bitcoin_vi_VN.ts  bitcoin_zh_CN.ts  hydracoin_af_ZA.ts  hydracoin_eo.ts  hydracoin_es.ts  hydracoin_eu_ES.ts  hydracoin_fa.ts  hydracoin_fa_IR.ts  (+16 more)
src/qt/res/: bitcoin-qt-res.rc
src/qt/test/: Makefile.am  uritests.cpp
src/test/: DoS_tests.cpp  Makefile.am  README  checkblock_tests.cpp  getarg_tests.cpp  netbase_tests.cpp  rpc_tests.cpp  test_hydracoin.cpp
